charts/logging/ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingrass-logging
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt  # If using SSL
spec:
  rules:
  - host: grafana.same3na.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-stack-grafana
            port:
              number: 80  # Your internal service port

  # - host: prometheus.same3na.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: logging-prometheus-server
  #           port:
  #             number: 80  # Your internal service port
